# wCaixaDigital

./: .coveragerc  .env.example  .gitignore  _debug_assinatura.py  _debug_xml_signed.xml  _debug_xml_unsigned.xml  _test_emissao.py  batch1_result.txt  batch1_result2.txt  batch2_result.txt  batch3_result.txt  batch3_result2.txt  batch4_final.txt  batch4_result.txt  batch4_result2.txt  batch4_result3.txt  batch5_result.txt  batch5_result2.txt  batch5_result3.txt  check_all_saldos.py  coverage_debug.txt  coverage_output.txt  coverage_report.txt  coverage_report_100.txt  coverage_report_101.txt  coverage_report_102.txt  coverage_report_103.txt  coverage_report_4.txt  coverage_report_5.txt  coverage_report_absolute_final_v2.txt  coverage_report_all.txt  coverage_report_api_1.txt  coverage_report_api_2.txt  coverage_report_api_3.txt  coverage_report_api_4.txt  coverage_report_api_6.txt  coverage_report_auditoria_1.txt  coverage_report_auditoria_2.txt  coverage_report_backoffice_1.txt  coverage_report_backoffice_2.txt  (+139 more)
.agent/scripts/: checklist.py  verify_all.py
caixa_nfse/: __init__.py  asgi.py  celery.py  conftest.py  urls.py  wsgi.py
caixa_nfse/api/: __init__.py  apps.py  serializers.py  urls.py  views.py
caixa_nfse/auditoria/: __init__.py  admin.py  apps.py  auth_signals.py  decorators.py  middleware.py  models.py  signals.py  urls.py  views.py
caixa_nfse/backoffice/: apps.py  forms.py  models.py  urls.py  views.py
caixa_nfse/caixa/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py  views_editar_saldo.py
caixa_nfse/clientes/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
caixa_nfse/contabil/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
caixa_nfse/core/: __init__.py  admin.py  apps.py  context_processors.py  encrypted_fields.py  (+6 more)
docker/: Dockerfile  Dockerfile.worker
docs/: PLAN-back-button-padronizacao.md  PLAN-backoffice-melhorias.md  PLAN-cadastro-completo.md  PLAN-card-highlight.md  PLAN-criptografia-senha.md  PLAN-data-ato.md  PLAN-date-param-order.md  PLAN-debug-relatorio-movimentacoes.md  PLAN-importacao-agrupada.md  PLAN-logging-estruturado.md  PLAN-modal-confirmacao.md  PLAN-nfse-config-settings.md  PLAN-nfse-de-movimentos.md  PLAN-ordenar-pendentes.md  PLAN-parcial-indicator.md  PLAN-recebimento-parcial.md  PLAN-receita-adicional.md  PLAN-receita-display.md  PLAN-relatorio-diario.md  PLAN-remap-receita1.md  PLAN-separar-pendentes-parciais.md  PLAN-test-fixes.md  PLAN-ver-importados-scroll.md  STATUS-2026-02-13.md  TASK-nfse-nacional.md
requirements/: base.txt  local.txt  production.txt
templates/: 403.html  base.html  base_dark.html
(+251 files in other folders)
